fixed wrong colors & sizes of some tables
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@618 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/omega_original/css/ispcp.css
+++ b/gui/themes/omega_original/css/ispcp.css
@@ -179,7 +179,6 @@ td.content3 {
 	color: 				#ffffff;
 	white-space: 		nowrap;
 	background: 		#000000;
-	white-space: 		nowrap;
 	height: 			30px;
 	padding: 			2px;
 	padding-left:		5px;
